# setup-python-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  test.yml
app/: math.py
tests/: test_core.py  test_math.py  test_project.py
