[tool.poetry]
authors = ["Justin Chiou <justinchiou@duck.com>"]
description = "Example Python repo setup"
license = "MIT"
name = "setup-python-repo"
version = "3.0.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
mypy = "^0.982"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
