[tool.poetry]
authors = ["Justin Chiou <justinchiou@duck.com>"]
description = "Example Python repo setup"
license = "MIT"
name = "setup-python-repo"
version = "4.0.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
exclude = ["*migrations*", "*tests*"]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]
format = "github"

[tool.coverage.run]
omit = [".venv/*", "tests/*", "setup.py"]
